--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "express-validator": "^6.2.0",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.2",
     "mongoose": "^5.7.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
+    "dotenv": "^8.1.0",
     "nodemon": "^1.19.2"
   }
 }
